--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
     </header>
 
     <main>
-      <button><img src="./images/icon-paper.svg" alt="paper"></button>
-      <button><img src="./images/icon-scissors.svg" alt="Scissors"></button>
-      <button><img src="./images/icon-rock.svg" alt="rock"></button>
+      <button class="btn-ways"><img src="./images/icon-paper.svg" alt="paper"></button>
+      <button class="btn-ways"><img src="./images/icon-scissors.svg" alt="Scissors"></button>
+      <button class="btn-ways"><img src="./images/icon-rock.svg" alt="rock"></button>
     </main>
 
-
+    <button class="btn-rules">
+      Rules
+    </button>
     
   </div>
 
