--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
         <h4>
           Score
         </h4>
-        <p id="score">1</p>
+        <p id="score">0</p>
       </div>
     </header>
 
-    <main>
-      <button class="btn-ways paper" data-choice="paper">
+    <main id="main">
+      <button class="btn-ways paper pick" data-choice="paper">
         <span class="wrapper">
           <img src="./images/icon-paper.svg" alt="paper">
         </span>
       </button>
-      <button class="btn-ways scissors" data-choice="scissor">
+      <button class="btn-ways scissors pick" data-choice="scissors">
         <span class="wrapper">
-        <img src="./images/icon-scissors.svg" alt="Scissors">
+        <img src="./images/icon-scissors.svg" alt="scissors">
       </span>
       </button>
-      <button class="btn-ways rock" data-choice="rock">
+      <button class="btn-ways rock pick" data-choice="rock">
         <span class="wrapper">
         <img src="./images/icon-rock.svg" alt="rock">
       </span>
@@ -49,22 +49,22 @@
   
   </div>
   
-  <div class="selection">
+  <div class="selection" id="selection">
     <div>
       <h2>You Picked</h2>
-      <button class="btn-ways paper">
+      <button class="btn-ways paper" id="userSelect">
         <span class="wrapper">
           <img src="./images/icon-paper.svg" alt="paper">
           </span>
       </button>
     </div>
     <div>
-      <p class="big-text">You <span id="win">Won</span></p>
+      <p class="big-text">You <span id="winner">Won</span></p>
       <button class="btn" id="reset">Playagain</button>
     </div>
     <div>
       <h2>The House Picked</h2>
-      <button class="btn-ways rock">
+      <button class="btn-ways rock" id="houseSelect">
         <span class="wrapper">
         <img src="./images/icon-rock.svg" alt="rock">
       </span>
