added rules part

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
       </button>
     </main>
 
-    <button class="btn-rules">
+    <div class="rules-container" id="modal">
+        <img src="./images/image-rules.svg" alt="rules" />
+        <button id="close"><img src="./images/icon-close.svg" alt="close"></button>
+    </div>
+
+    <button class="btn-rules" id="open">
       Rules
     </button>
   
