--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           </span>
       </button>
     </div>
-    <div>
+    <div class="go-down">
       <p class="big-text">You <span id="winner">Won</span></p>
-      <button class="btn" id="reset">Playagain</button>
+      <button class="btn" id="reset">Play again</button>
     </div>
     <div>
       <h2>The House Picked</h2>
